exams creation to a set course,with file upload